# colourpick

./: .gitignore  LICENSE.txt  README.md  colourpick.py  setup.cfg  setup.py  test.py
Colourpick.egg-info/: PKG-INFO  SOURCES.txt
colourpick/: clusterpick.py  colourpick.py
src/colourpick/: colourpick.py
tests/: test.py
