[metadata]
name = colourpick
version = attr: 1.0
author = Jay Chau
description = Calculation of the dominant (average) RGB value in an image using k-means clustering
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
include_package_data = True
packages = find:
scripts =
    src/colourpick.py
install_requires =
    numpy
    opencv-python
    sklearn
    